[tool.poetry]
name = "saywhat"
version = "0.1.0"
description = ""
authors = ["Kyle <kylepw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tweepy = "^3.8.0"
SQLAlchemy = "^1.3.12"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
