[tool.poetry]
name = "saywhat"
version = "0.1.0"
description = "Discover what __________ tweeted about __________."
authors = ["Kyle <kylepw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.1"
Flask-SQLAlchemy = "^2.4.1"
tweepy = "^3.8.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.10.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
